--- a/.github/workflows/spark.yml
+++ b/.github/workflows/spark.yml
@@ -19,7 +19,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - run: ls -la
-
   
     - uses: actions/setup-python@v5
       with:
@@ -36,3 +35,25 @@ jobs:
         hadoop-version: '3'
 
     - run: spark-submit --version
+
+    - run: spark-submit --version
+    - run: spark-submit --master local hello.py
+    - run: ls -la  
+
+
+    permissions:
+      # Give the default GITHUB_TOKEN write permission to commit and push the
+      # added or changed files to the repository.
+      contents: write
+
+     - name: GIT commit and push docs
+      env: 
+        CI_COMMIT_MESSAGE: save spark results
+        CI_COMMIT_AUTHOR: JessicaGarcia1 
+      run: |
+        git config --global user.name "${{ env.CI_COMMIT_AUTHOR }}"
+        git config --global user.email "garsiljes@gmail.com"
+        git add results
+        git commit -m "${{ env.CI_COMMIT_MESSAGE }}"
+        git push
+
